--- a/pom.xml
+++ b/pom.xml
@@ -101,12 +101,15 @@
 	
 	<distributionManagement>
 		<repository>
-			<id>releases</id>
+			<id>central</id>
+			<name>SYNPS6144348-releases</name>
 			<url>http://10.119.116.89:8040/artifactory/libs-release-local</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
-			<url>http://10.119.116.89:8040/artifactory/snapshots</url>
+			<name>SYNPS6144348-snapshots</name>
+			<url>http://10.119.116.89:8040/artifactory/libs-snapshot-local</url>
 		</snapshotRepository>
 	</distributionManagement>
-</project>
+	
+	</project>
